@@ -3,6 +3,19 @@ package Mobile::P2kMoto::FS;
 use strict;
 use warnings;
 
+sub open {
+    my( $file, $mode, $size ) = @_;
+    my $rv = _open( $file, $mode );
+
+    require Symbol;
+    require Mobile::P2kMoto::FS::FH;
+
+    my $fh = Symbol::gensym();
+    tie *$fh, 'Mobile::P2kMoto::FS::FH', $size;
+
+    return $fh;
+}
+
 sub dir {
     my( $pattern ) = @_;
     my( $search ) = $pattern;
@@ -40,11 +53,27 @@ B<IMPORTANT>: only one file can be open at a given time.
 
 =head2 open
 
-  my $rv = open( "/a/foo", 0666 );
+  my $fh = open( "/a/foo", 0, $size );
+
+Opens or creates a file, returning a Perl filehandle.  Only one file
+can be opened at the same time.  Make sure you always call C<close()>
+before calling C<open()> again.
+
+Due to the poor interface offered by the C<p2kmoto> library, when
+opening a file for reading or updating, the starting size of the file
+must be specified.  This might be fixed in the future.
+
+=head2 _open
+
+  my $rv = _open( "/a/foo", 0 );
 
 Opens or creates a file.  Note that since only one file can be opened
-at the same time, the return vale is a status, not a file handle.
+at the same time, the return value is a status, not a file handle.
 Make sure you always call C<close()> before calling C<open()> again.
+
+This maps directly to the C<p2k_FSAC_open()> function.
+
+Use C<open()> unless you know you need this function.
 
 =head2 close
 
