@@ -1,9 +1,10 @@
 #!/usr/bin/perl -w
 
 use strict;
-use Test::More tests => 4;
+use Test::More tests => 5;
 
 use_ok( 'Mobile::P2kMoto' );
 use_ok( 'Mobile::P2kMoto::FS' );
+use_ok( 'Mobile::P2kMoto::FS::FH' );
 use_ok( 'Mobile::P2kMoto::FS::FileInfo' );
 use_ok( 'Mobile::P2kMoto::Constants' );
